    if the new key does not match the old key.

* Generated specification documentation:
  - Added the freeze parameter in the api.dtd.
  - Added new possible parameters in the function.dtd.

* Logdoc:
  - Added a note to the generated Logdoc index page, about deciding whether a
    log message should be at the FATAL message.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.164:

* XINS/Java Common Library:
  - Added class LogCentral, with setLocale(String) method.
  - Renamed NoSuchTranslationBundleException to UnsupportedLocaleException.
  - Added inner class LogController in AbstractLog.

* Logdoc:
  - Generating LogController subclass for each Log class.
  - Removed setTranslationBundle() from generated Log class.
  - Moved XML files from src/logdoc to src/logdoc/server.

* Generated specification documentation:
  - Removed the dependency on rcs. The specification is now created if
    a rcsdate or rcsversion attribute is missing from the type,
    the result code or the function.
    The version number is then replaced with '?.?'.

* Generated build file:
  - Added a new target server-<api> that builds the war file, the specdocs
    and the javadoc on the server-side.
  - Added a new target client-<api> that builds the jar file and the javadoc
    on the client-side.
  - Added a new target all-<api> that builds the server-side and the
    client-side.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.163:

* XINS/Java Server Framework:
  - Improved Dutch (nl_NL) translation for log message 2026.
  - The recordCall() in FunctionStatistics now returns the duration of the
    call. It replaces the getLastDuration() method introduced in
    XINS 0.162.
    In XINS 0.162 the FunctionStatistics.getLastDuration() may not return
    the duration of the expected function call.

* XINS/Java Common Library: