@@ -170,11 +170,8 @@ MISCELLANEOUS
   task would need to be developed for this.
 * Support the Freshmeat.net XML-RPC interface for notification of new
   releases.
-* Move as much as possible tasks from the xins shell scripts to ANT tasks.
 * Refactor documentation.
 * Merge the similar targets in build.xml (java-client, java-server,
   -prepare-java-client, -prepare-java-server, -prepare-java-common).
 * Link the javadoc to the correct XINS version on sourceforge.
-* Add a ANT target that creates given the name an empty XINS project.
 * xslt & xml files should contain a description in their header.
-* The ANT build file should be regenerated only if a source file have changed.
