@@ -1,0 +1,52 @@
+<?xml version="1.0" encoding="US-ASCII" ?>
+<!--
+ -*- mode: Fundamental; tab-width: 4; -*-
+ ex:ts=4
+
+ $Id$
+
+ Transforms a single XML file using XSLT to bootstrap the build process for a
+ XINS project.
+-->
+
+<project name="xins-bootstrap-ant" default="make-build" basedir=".">
+
+	<target name="make-build">
+		<property name="project_home" value="${user.dir}" />
+		<echo message="Current directory is ${project_home}" />
+
+		<available file="${xins_home}/src/xslt/xins-project_to_ant-build.xslt"
+		           property="ant.build.xslt.exists" />
+		<fail message="Cannot find stylesheet" unless="ant.build.xslt.exists" />
+
+		<available file="${project_home}/xins-project.xml"
+		           property="xins-project.xml.exists" />
+		<fail message="Cannot find input file xins-project.xml" unless="xins-project.xml.exists" />
+
+		<mkdir dir="${project_home}/build" />
+
+		<antcall target="transform">
+			<param name="in" value="${project_home}/xins-project.xml" />
+			<param name="out" value="${project_home}/build/build.xml" />
+			<param name="style" value="${xins_home}/src/xslt/xins-project_to_ant-build.xslt" />
+			<param name="builddir" value="build" />
+		</antcall>
+
+	</target>
+
+	<target name="transform">
+		<property file="${xins_home}/.version.properties" />
+		<property name="version" value="${version.major}.${version.minor}${version.suffix}" />
+		<dependset>
+			<srcfileset    file="${xins_home}/.version.properties" />
+			<srcfileset    dir="${project_home}"    includes="**/api.xml"    />
+			<targetfileset file="${out}" />
+		</dependset>
+		<style in="${in}" out="${out}" style="${style}">
+			<param name="xins_home"    expression="${xins_home}"    />
+			<param name="project_home" expression="${project_home}" />
+			<param name="builddir"     expression="${builddir}"     />
+			<param name="xins_version" expression="${version}"     />
+		</style>
+	</target>
+</project>
